# kobold

./: .bazelrc  .gitignore  .prettierignore  .prettierrc  .swcrc  BUILD.bazel  Makefile  README.md  WORKSPACE  docker-compose.yaml  expenditure.ts  index.ts  jest.config.js  nodemon.json  package-lock.json  package.json  pnpm-lock.yaml  prices.ts  pull.bzl  transaction.ts  tsconfig.json  withdrawal.ts
.github/workflows/: test.yaml
libraries/config/: BUILD.bazel  config.test.ts  config.ts  default.config.ts  dev.config  example.config  index.ts
libraries/enums/: BUILD.bazel  endpoints.ts  locales.enum.ts  transactionTypes.enum.ts
libraries/exceptions/: BUILD.bazel  exception.ts  index.ts
libraries/i18n/: BUILD.bazel  index.ts
libraries/i18n/locales/de/: errors.json
libraries/i18n/locales/en/: errors.json
libraries/logger/: BUILD.bazel  index.ts  logger.ts
libraries/middlewares/: BUILD.bazel  cors.middleware.ts  error.middleware.ts  language.middleware.ts  logger.middleware.ts
libraries/mongodb/: BUILD.bazel  mongodbClient.ts
libraries/validation/: BUILD.bazel  buildAndValidateModel.ts
macros/: nodejs_image.bzl  ts_library.bzl
scripts/: start_service_dev.sh
server/: BUILD.bazel  index.ts  main.controller.ts
server/models/: deposit.model.ts  trade.model.test.ts  trade.model.ts  transaction.model.ts  transfer.model.ts  withdrawal.model.ts
src/: index.ts
src/transactions/: deposit.ts  earning.ts  index.ts  trade.ts
web/: .env.development  .env.production  Dockerfile  Dockerfile.dev  next-i18next.config.js  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.js
web/components/: navigation.tsx
web/components/icons/: dashboard.icon.tsx  error.icon.tsx  info.icon.tsx  transactions.icon.tsx
web/contexts/: contextUtils.ts  navigation.context.tsx  snackbar.context.tsx
web/lib/: classes.ts  cookiesState.ts  environment.ts  fetcher.ts  fetcherSSR.ts  getProps.ts
web/pages/: _app.tsx  _document.tsx  index.tsx  transactions.tsx
web/public/locales/de/: navigation.json  transactions-page.json
web/public/locales/en/: navigation.json
web/styles/: globals.sass
