load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("@aspect_rules_jest//jest:defs.bzl", "jest_test")
load("//macros:ts_library.bzl", "ts_library")

ts_library(
    name = "lib",
    srcs = glob(
        include = ["*.ts"],
        exclude = ["*.test.ts"],
    ),
    deps = [
        "//:node_modules/@kobold/exceptions",
        "//:node_modules/@types/node",
        "//:node_modules/inversify",
    ],
)

npm_package(
    name = "config",
    srcs = [":lib"],
    package = "@kobold/config",
    visibility = ["//visibility:public"],
)

ts_library(
    name = "config_test_lib",
    srcs = glob(["*.test.ts"]),
    deps = [
        "lib",
        "//:node_modules/@abraham/reflection",
        "//:node_modules/@types/jest",
    ],
)

jest_test(
    name = "config_test",
    config = "//:jest_config",
    data = ["config_test_lib"],
)
