load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("//macros:ts_library.bzl", "ts_library")

ts_library(
    name = "lib",
    srcs = glob(
        include = ["*.ts"],
        exclude = ["*.test.ts"],
    ),
)

npm_package(
    name = "enums",
    srcs = ["lib"],
    package = "@kobold/enums",
    visibility = ["//visibility:public"],
)
