load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("//macros:ts_library.bzl", "ts_library")

ts_library(
    name = "lib",
    srcs = glob(
        include = ["*.ts"],
        exclude = ["*.test.ts"],
    ),
    deps = [
        "//:node_modules/@types/node",
    ],
)

npm_package(
    name = "exceptions",
    srcs = [":lib"],
    package = "@kobold/exceptions",
    visibility = ["//visibility:public"],
)
