load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("//macros:ts_library.bzl", "ts_library")

ts_library(
    name = "lib",
    srcs = glob(
        include = ["*.ts"],
        exclude = ["*.test.ts"],
    ),
    deps = [
        "//:node_modules/@kobold/config",
        "//:node_modules/@kobold/enums",
        "//:node_modules/@types/node",
        "//:node_modules/inversify",
        "//:node_modules/pino",
    ],
)

npm_package(
    name = "logger",
    srcs = [":lib"],
    package = "@kobold/logger",
    visibility = ["//visibility:public"],
)
