load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("//macros:ts_library.bzl", "ts_library")

ts_library(
    name = "lib",
    srcs = glob(
        include = ["*.ts"],
        exclude = ["*.test.ts"],
    ),
    deps = [
        "//:node_modules/@kobold/config",
        "//:node_modules/@kobold/enums",
        "//:node_modules/@kobold/exceptions",
        "//:node_modules/@kobold/i18n",
        "//:node_modules/@kobold/logger",
        "//:node_modules/@types/cors",
        "//:node_modules/@types/express",
        "//:node_modules/@types/node",
        "//:node_modules/class-validator",
        "//:node_modules/cors",
        "//:node_modules/express",
        "//:node_modules/http-status-codes",
        "//:node_modules/inversify",
        "//:node_modules/inversify-express-utils",
    ],
)

npm_package(
    name = "middlewares",
    srcs = ["lib"],
    package = "@kobold/middlewares",
    visibility = ["//visibility:public"],
)
