load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("//macros:ts_library.bzl", "ts_library")

ts_library(
    name = "lib",
    srcs = glob(
        include = ["*.ts"],
        exclude = ["*.test.ts"],
    ),
    deps = [
        "//:node_modules/@3dreamz/config",
        "//:node_modules/@3dreamz/enums",
        "//:node_modules/@3dreamz/logger",
        "//:node_modules/@types/node",
        "//:node_modules/inversify",
        "//:node_modules/mongodb",
    ],
)

npm_package(
    name = "mongodb",
    srcs = [":lib"],
    package = "@3dreamz/mongodb",
    visibility = ["//visibility:public"],
)
