load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("//macros:ts_library.bzl", "ts_library")

ts_library(
    name = "lib",
    srcs = glob(
        include = ["*.ts"],
        exclude = ["*.test.ts"],
    ),
    deps = [
        "//:node_modules/@kobold/exceptions",
        "//:node_modules/@types/node",
        "//:node_modules/class-transformer",
        "//:node_modules/class-validator",
        "//:node_modules/http-status-codes",
    ],
)

npm_package(
    name = "validation",
    srcs = ["lib"],
    package = "@kobold/validation",
    visibility = ["//visibility:public"],
)
